--- a/src/main/resources/templates/pages/quotation-requests.html
+++ b/src/main/resources/templates/pages/quotation-requests.html
@@ -53,7 +53,7 @@
                             </span>
                         </td>
                         <td th:text="${quotation.transaction_date}"></td>
-                        <td th:text="${quotation.grand_total}"></td>
+                        <td th:text="${#numbers.formatDecimal(quotation.grand_total, 0, 'COMMA', 2, 'POINT')}"></td>
                         <td th:text="${quotation.name}"></td>
                             <td class="actions-col">
                                 <div class="actions">
